force-app/main/default/objects/Tabla_Comision__c/Tabla_Comision__c.object-meta.xml
<CustomObject>
    <label>Tabla Comision</label>
    <nameField>
        <label>Nombre de Tabla Comision</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tablas Comisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>