force-app/main/default/objects/Tabla_Comision__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <description>Canal de distribucion al que aplica esta tarifa de comision. Permite tarifas diferenciadas por canal.</description>
    <label>Canal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BROKER</fullName>
                <default>true</default>
                <label>Broker / Agente</label>
            </value>
            <value>
                <fullName>CALL_CENTER</fullName>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>DIRECTO</fullName>
                <label>Directo</label>
            </value>
            <value>
                <fullName>ONLINE</fullName>
                <label>Online / Digital</label>
            </value>
            <value>
                <fullName>PROMOTORIA</fullName>
                <label>Promotoria</label>
            </value>
            <value>
                <fullName>TODOS</fullName>
                <label>Todos los canales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>