force-app/main/default/objects/Tabla_Comision__c/fields/Fecha_vigencia_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia_fin__c</fullName>
    <label>Vigencia fin</label>
    <type>Date</type>
</CustomField>