force-app/main/default/objects/Tabla_Comision__c/fields/Fecha_vigencia_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia_inicio__c</fullName>
    <description>Fecha a partir de la cual esta tarifa de comision aplica. Permite versionar tarifas historicamente.</description>
    <label>Vigencia inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>