force-app/main/default/objects/Tabla_Comision__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <description>Nombre de la institución (AXA, HDI, CHUBB, GNP, Qualitas, ANA Seguros, Allianz)</description>
    <label>Institución</label>
    <length>100</length>
    <type>Text</type>
</CustomField>