force-app/main/default/objects/Tabla_Comision__c/fields/Institucion_ref__c.field-meta.xml
<CustomField>
    <fullName>Institucion_ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institución</label>
    <referenceTo>Institucion__c</referenceTo>
    <relationshipLabel>Tabla de Comisiones</relationshipLabel>
    <relationshipName>Tablas_Comision</relationshipName>
    <type>Lookup</type>
</CustomField>