force-app/main/default/objects/Tabla_Comision__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>