force-app/main/default/objects/Tabla_Comision__c/fields/Override_Promotor__c.field-meta.xml
<CustomField>
    <fullName>Override_Promotor__c</fullName>
    <description>% override que Allianz paga a Ollin como promotor por ventas de agentes externos.</description>
    <label>% Override Promotor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>