force-app/main/default/objects/Tabla_Comision__c/fields/Pct_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Pct_Vendedor__c</fullName>
    <description>Porcentaje de la comision total que se paga al vendedor (resto queda para la promotoria / casa). Ej: 0.70 = 70% al vendedor.</description>
    <label>% Vendedor</label>
    <precision>5</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>