force-app/main/default/objects/Tabla_Comision__c/fields/PctComision__c.field-meta.xml
<CustomField>
    <fullName>PctComision__c</fullName>
    <description>Porcentaje de comision que paga la institucion por ramo/subproducto</description>
    <label>PctComision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>