force-app/main/default/objects/Tabla_Comision__c/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <description>Ramo o linea de negocio (Autos, GMM, Vida, Danos, etc.)</description>
    <label>Ramo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>