force-app/main/default/objects/Tabla_Comision__c/fields/Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Subproducto__c</fullName>
    <description>Subproducto o linea especifica dentro del ramo</description>
    <label>Subproducto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>