force-app/main/default/objects/Tabla_Comision__c/fields/Tipo_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Negocio__c</fullName>
    <label>Tipo de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todos</fullName>
                <default>true</default>
                <label>Todos</label>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>2a Renovacion</fullName>
            </value>
            <value>
                <fullName>3a Renovacion</fullName>
            </value>
            <value>
                <fullName>4a Renovacion Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>