force-app/main/default/objects/Tabla_Comision__c/fields/Vigente__c.field-meta.xml
<CustomField>
    <fullName>Vigente__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Vigente</label>
    <type>Checkbox</type>
</CustomField>